@@ -36,13 +36,6 @@
          <fileset dir="${srcdir}"
                   includes="org/vrjuggler/tweek/wizard/images/*" />
       </jar>
-      <jar destfile="WizardBuilder.jar" basedir=".">
-         <include name="org/vrjuggler/tweek/wizard/builder/**" />
-         <fileset dir="${srcdir}"
-                  includes="org/vrjuggler/tweek/wizard/builder/images/*" />
-         <fileset dir="${srcdir}"
-                  includes="LICENSE-java-laf.txt" />
-      </jar>
    </target>
 
    <!-- Clean up -->
